Fix sounds, 403 errors, PWA functionality and mobile notifications

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="MCM Alerts" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="application-name" content="MCM Alerts" />
+    <meta name="msapplication-TileColor" content="#1e293b" />
+    <meta name="msapplication-TileImage" content="/mcm-logo-192.png" />
 
     <meta property="og:title" content="MCM Alerts - Real-time Monitoring System" />
     <meta property="og:description" content="Stay informed with real-time alerts for monitoring website uptime and system status." />
@@ -25,6 +29,9 @@
     <meta name="twitter:title" content="MCM Alerts" />
     <meta name="twitter:description" content="Real-time monitoring and alert system" />
     <meta name="twitter:image" content="/mcm-logo-512.png" />
+
+    <!-- Preload critical resources -->
+    <link rel="preload" href="/service-worker.js" as="script" />
   </head>
 
   <body>
