Optimize design layout and notification system

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <!-- PWA Meta Tags -->
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#1e293b" />
-    <link rel="icon" href="/mcm-logo-192.png" type="image/png" />
+    <link rel="icon" href="/mcm-logo-192.png" type="image/png" sizes="192x192" />
+    <link rel="shortcut icon" href="/mcm-logo-192.png" type="image/png" />
     <link rel="apple-touch-icon" href="/mcm-logo-192.png" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
